[package]
name = "crate_name"
version = "0.1.0"
authors = ["Author Name <author@example.com>"]

[dependencies]
bootloader = "0.9.23"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
